@@ -4,6 +4,8 @@ Version 0.6.2
  * make traffic notification more flexible to accommodate some common limits
    (hourly, daily, etc...)
  * don't always show ports of a bridge or aggregated interface as "down"
+ * if running on KDE >= 4.4, statistics use the calendar system defined in
+   System Settings
 
 Version 0.6.1
  * support for reading wireless info on FreeBSD
